--- a/insights-service/package.json
+++ b/insights-service/package.json
@@ -18,7 +18,9 @@
     ]
   },
   "dependencies": {
+    "@types/bcrypt": "^6.0.0",
     "axios": "^1.11.0",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
@@ -42,16 +44,8 @@
     "@types/node": "^24.3.1",
     "@types/passport": "^1.0.17",
     "@types/passport-jwt": "^4.0.1",
-    "@typescript-eslint/eslint-plugin": "^8.42.0",
-    "@typescript-eslint/parser": "^8.42.0",
-    "eslint": "^9.35.0",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-prettier": "^5.5.4",
-    "husky": "^9.1.7",
-    "lint-staged": "^16.1.6",
     "nodemon": "^3.1.10",
     "pino-pretty": "^13.1.1",
-    "prettier": "^3.6.2",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.2"
