Removed password from user response

--- a/insights-service/package.json
+++ b/insights-service/package.json
@@ -12,8 +12,8 @@
   "description": "",
   "lint-staged": {
     "*.{js,ts}": [
-      "eslint --fix",
-      "prettier --write"
+      "eslint --fix .",
+      "prettier --write ."
     ]
   },
   "dependencies": {
